[package]
name = "sigma-serve"
version = "0.1.1"
edition = "2024"
authors = ["František Hrubý <frantisek@hruby.xyz>"]
description = "sigma-serve-rs is a simple, lightweight HTTP server written in Rust."
license = "MIT"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
log = "0.4.27"
simplelog = "0.12.2"
urlencoding = "2.1.3"
